[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialog_editor/src/Save.svg" type="Texture" id=1]
[ext_resource path="res://addons/dialog_editor/src/Add.svg" type="Texture" id=3]
[ext_resource path="res://addons/dialog_editor/editor/editor.gd" type="Script" id=4]
[ext_resource path="res://addons/dialog_editor/src/Load.svg" type="Texture" id=5]

[node name="MainInterface" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenu" type="HBoxContainer" parent="."]
margin_right = 463.0
margin_bottom = 24.0

[node name="FileLineEdit" type="LineEdit" parent="TopMenu"]
margin_right = 300.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
align = 1
editable = false
placeholder_text = "Select the dialog folder"

[node name="LoadMenu" type="MenuButton" parent="TopMenu"]
margin_left = 304.0
margin_right = 392.0
margin_bottom = 24.0
text = "Load File"
icon = ExtResource( 5 )
items = [ "From CSV", null, 0, false, false, 0, 0, null, "", false, "From Dialog Resource", null, 0, false, false, 1, 0, null, "", false ]

[node name="VSeparator" type="VSeparator" parent="TopMenu"]
margin_left = 396.0
margin_right = 414.0
margin_bottom = 24.0
custom_constants/separation = 18

[node name="LocaleSelector" type="OptionButton" parent="TopMenu"]
margin_left = 418.0
margin_right = 463.0
margin_bottom = 24.0
text = "en"
items = [ "en", null, false, 0, null, "es", null, false, 1, null ]
selected = 0

[node name="VSeparator2" type="VSeparator" parent="TopMenu" groups=[
"FileInterface",
]]
visible = false
margin_left = 467.0
margin_right = 485.0
margin_bottom = 24.0
custom_constants/separation = 18

[node name="AddDialogButton" type="Button" parent="TopMenu" groups=[
"FileInterface",
]]
visible = false
margin_left = 489.0
margin_right = 616.0
margin_bottom = 24.0
text = "Add new dialog"
icon = ExtResource( 3 )

[node name="SaveButton" type="Button" parent="TopMenu" groups=[
"FileInterface",
]]
visible = false
margin_left = 620.0
margin_right = 679.0
margin_bottom = 24.0
text = "Save"
icon = ExtResource( 1 )

[node name="CenterContainer" type="MarginContainer" parent="."]
margin_top = 28.0
margin_right = 463.0
margin_bottom = 238.0
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="CenterContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 458.0
margin_bottom = 205.0
rect_min_size = Vector2( 0, 200 )

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 458.0
margin_bottom = 205.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/ScrollContainer"]
margin_right = 453.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="TopMenu/LocaleSelector" to="." method="_on_LocaleSelector_item_selected"]
[connection signal="button_up" from="TopMenu/AddDialogButton" to="." method="_on_AddDialogButton_button_up"]
[connection signal="button_up" from="TopMenu/SaveButton" to="." method="_on_SaveButton_button_up"]
